fix sass linter errors

--- a/src/stylesheets/_reset.scss
+++ b/src/stylesheets/_reset.scss
@@ -219,13 +219,13 @@ a {
        * 'mono' font family.
        */
 
-pre,
-code,
-kbd,
-samp {
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono',
-    'Courier New', monospace;
-}
+// pre,
+// code,
+// kbd,
+// samp {
+//   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono',
+//     'Courier New', monospace;
+// }
 
 /**
        * Make replaced elements `display: block` by default as that's
